--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,12 @@
     "require": {
         "php": ">=5.3.0",
         "monolog/monolog": "1.*",
-        "slim/slim": "2.*"
+        "slim/slim": "2.*",
+        "slim/views": "0.*",
+        "twig/twig": "1.*",
+        "components/jquery": "1.*",
+        "components/bootstrap" : "3.*",
+        "robmorgan/phinx"
     }
 }
         
