Incluindo Phinx e ajustando estrutura
Incluindo Phinx (migration pro slim =D) e removendo a estrutura o mysql
de criação, e corrigindo bugs de estrutura do projeto.

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,6 @@
         "twig/twig": "1.*",
         "components/jquery": "1.*",
         "components/bootstrap" : "3.*",
-        "robmorgan/phinx"
+        "robmorgan/phinx": "^0.8.1" 
     }
 }
-        
