--- a/phinx.yml
+++ b/phinx.yml
@@ -19,7 +19,7 @@ environments:
         host: localhost
         name: mysqldbdoc
         user: root
-        pass: 'root'
+        pass: ''
         port: 3306
         charset: utf8
 
